// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should be rendered correctly 1`] = `
<div
  className="uui-vertical-direction root container"
>
  <div
    className="container root size-18"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-radioinput"
    />
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </div>
  <div
    className="container root size-18"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-radioinput"
    />
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </div>
</div>
`;

exports[`RadioGroup should be rendered correctly with props 1`] = `
<div
  className="uui-horizontal-direction root container"
>
  <div
    className="container uui-disabled root size-18"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-radioinput"
    />
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </div>
  <div
    className="container uui-disabled root size-18"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-radioinput"
    />
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </div>
</div>
`;
